[gd_scene load_steps=8 format=2]

[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/PowerUps/ShotUp.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/shotup.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[sub_resource type="CircleShape2D" id=3]
radius = 25.0

[sub_resource type="Animation" id=4]
resource_name = "FadeAway"
length = 0.4

[node name="ShotUp" type="Area2D"]
script = ExtResource( 2 )

[node name="ActivateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="Hitbox2" parent="." instance=ExtResource( 1 )]
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox2" index="0"]
shape = SubResource( 2 )
disabled = true

[node name="Hitbox3" parent="." instance=ExtResource( 1 )]
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox3" index="0"]
shape = SubResource( 3 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeAway = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
[connection signal="timeout" from="ActivateTimer" to="." method="_on_ActivateTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Hitbox"]

[editable path="Hitbox2"]

[editable path="Hitbox3"]
